<resources>
    <string name="app_name">Thuận Thiên</string>
    <!-- Strings related to login -->
    <string name="prompt_phone">Số điện thoại*</string>
    <string name="prompt_password">Mật khẩu*</string>
    <string name="action_login">Đăng Nhập</string>
    <string name="action_logout">Đăng Xuất</string>
    <string name="title_login">ĐĂNG NHẬP</string>
    <string name="title_main">KHẢO SÁT</string>
    <string name="prompt_input_answer">Xin vui lòng nhập câu trả lời...</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Số điện thoại trống</string>
    <string name="invalid_password">Mật khẩu trống</string>
    <string name="login_failed">Đăng Nhập thất bại</string>
    <string name="title_message">Thông báo</string>
    <string name="title_question">Câu hỏi</string>
    <string name="title_video">Video</string>
    <string name="title_no_data">Không có dữ liệu</string>
    <string name="title_user_info">THÔNG TIN CÁ NHÂN</string>
    <string name="prompt_name">Họ tên*</string>
    <string name="prompt_address">Địa chỉ</string>
    <string name="prompt_old_pass">Mật khẩu cũ*</string>
    <string name="prompt_new_pass">Mật khẩu mới*</string>
    <string name="prompt_new_pass_again">Nhập lại mật khẩu mới*</string>
    <string name="prompt_change_pass">Đổi mật khẩu</string>
    <string name="invalid_name">Họ tên trống</string>
    <string name="invalid_new_password">Mật khẩu mới trống</string>
    <string name="invalid_new_password_2">Không đủ 6 kí tự</string>
    <string name="invalid_new_password_3">Mật khẩu mới không giống nhau</string>
    <string name="prompt_update_success">Cập nhật thông tin thành công</string>
    <string name="prompt_answer">Vui lòng nhập câu trả lời</string>
    <string name="prompt_loading">Đang tải dữ liệu</string>
    <string name="title_manager">QUẢN LÝ TÀI KHOẢN</string>
    <string name="action_edit_account">Chỉnh sửa tài khoản</string>
    <string name="action_create_tree">Tạo cây trồng</string>
    <string name="action_create_farmer">Tạo nông dân</string>
    <string name="action_create_order">Tạo đơn hàng</string>
    <string name="action_manager_tree">Quản lý cây trồng</string>
    <string name="action_manager_order">Quản lý đơn hàng</string>
    <string name="action_manager_farmer">Quản lý nông dân</string>
    <string name="title_create_tree">TẠO CÂY TRỒNG</string>
    <string name="title_create_farmer">TẠO NÔNG DÂN</string>
    <string name="title_edit_farmer">CHỈNH SỬA NÔNG DÂN</string>
    <string name="title_create_order">TẠO ĐƠN HÀNG</string>
    <string name="title_edit_order">CHỈNH SỬA ĐƠN HÀNG</string>
    <string name="title_edit_tree">CHỈNH SỬA CÂY TRỒNG</string>
    <string name="title_manager_order">QUẢN LÝ ĐƠN HÀNG</string>
    <string name="title_manager_farmer">QUẢN LÝ NÔNG DÂN</string>
    <string name="title_manager_tree">QUẢN LÝ CÂY TRỒNG</string>
    <string name="prompt_quantity">Số lượng*</string>
    <string name="prompt_product">Chọn sản phẩm*</string>
    <string name="invalid_quantity">Số lượng sản phẩm trống</string>
    <string name="invalid_tree">Vui lòng chọn cây trồng</string>
    <string name="invalid_tree_age">Số tuổi cây trồng trống</string>
    <string name="invalid_tree_quantity">Số lượng cây trồng trống</string>
    <string name="alert_title">Thông báo</string>
    <string name="alert_cancel">Tắt thông báo</string>
    <string name="prompt_ward">Xã/Phường/Thị trấn*</string>
    <string name="prompt_district">Quận/Huyện*</string>
    <string name="prompt_city">Tỉnh/Thành phố*</string>
    <string name="invalid_selected_city">Vui lòng chọn Tỉnh/Thành phố</string>
    <string name="invalid_selected_district">Vui lòng chọn Quận/Huyện</string>
    <string name="invalid_selected_ward">Vui lòng chọn Xã/Phường/Thị trấn</string>
    <string name="invalid_street">Địa chỉ trống</string>
    <string name="invalid_area">Diện tích trống</string>
    <string name="create_farmer_success">Nông dân này vừa được thêm mới vào hệ thống.</string>
    <string name="edit_farmer_success">Cập nhật nông dân thành công.</string>
    <string name="title_success">Thành Công</string>
    <string name="title_fail">Thất bại</string>
    <string name="message_loading">Đang xử lý.Vui lòng chờ...</string>
    <string name="title_user">Tài Khoản</string>
    <string name="search_hint_manager_order">Tìm số điện thoại hoặc mã đơn hàng...</string>
    <string name="search_hint_manager_farmer">Tìm số điện thoại hoặc tên...</string>
    <string name="prompt_area">Diện tích (công, sào)*</string>
    <string name="prompt_tree">Cây trồng*</string>
    <string name="prompt_tree_age">Tuổi cây*</string>
</resources>
