<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_NoData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/title_no_data"
        android:textColor="@android:color/black"
        android:padding="@dimen/title_padding"
        android:textSize="17sp"
        android:gravity="center"
        android:textStyle="bold"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/llDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/title_padding">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/prompt_name"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:textSize="15sp"
                android:text="" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/title_padding">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/prompt_phone"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:textSize="15sp"
                android:text="" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/title_padding">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/prompt_address"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:textSize="15sp"
                android:text="" />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/changePass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/title_padding"
            android:padding="@dimen/title_padding"
            android:text="@string/prompt_change_pass"
            android:checked="false"
            android:textSize="15sp"/>

        <LinearLayout
            android:id="@+id/llChangePass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/title_padding">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/oldPass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/prompt_old_pass"
                    android:inputType="text"
                    android:selectAllOnFocus="true"
                    android:textSize="15sp"
                    android:text="" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/title_padding">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/newPass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/prompt_new_pass"
                    android:inputType="text"
                    android:textSize="15sp"
                    android:selectAllOnFocus="true"
                    android:text="" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/title_padding">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/newPassAgain"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/prompt_new_pass_again"
                    android:inputType="text"
                    android:selectAllOnFocus="true"
                    android:textSize="15sp"
                    android:text="" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
