<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/title_padding">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/prompt_phone"
            android:inputType="phone"
            android:selectAllOnFocus="true"
            android:text=""
            android:textSize="15sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/title_padding">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/prompt_name"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            android:text=""
            android:textSize="15sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.farm.dinh.ui.viewmodel.custom.MaterialSpinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/title_padding"
        app:ms_arrowColor="@android:color/darker_gray"
        app:ms_arrowSize="10dp"
        app:ms_floatingLabelColor="@android:color/darker_gray"
        app:ms_floatingLabelText="@string/prompt_product"
        app:ms_hint="@string/prompt_product"
        app:ms_alignLabels="false"
        app:ms_multiline="true" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/title_padding">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/quantity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/prompt_quantity"
            android:inputType="numberSigned"
            android:selectAllOnFocus="true"
            android:text=""
            android:textSize="15sp" />

    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>