<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/search_View"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/bg_search_input"
        android:drawableStart="@drawable/ic_search"
        android:hint="@string/search_hint_manager_farmer"
        android:inputType="text"
        android:padding="5dp"
        android:selectAllOnFocus="true"
        android:text=""
        android:textSize="15sp" />

    <FrameLayout
        android:id="@+id/lvFarmer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/txt_NoData"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="@dimen/title_padding"
        android:text="@string/title_no_data"
        android:textColor="@android:color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <Button
        android:id="@+id/createFarmer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lvOrder"
        android:layout_gravity="bottom"
        android:layout_margin="10dp"
        android:background="@drawable/bg_btn_logout"
        android:padding="@dimen/title_padding"
        android:text="@string/action_create_farmer"
        android:textColor="@color/colorPrimary2"
        android:textAllCaps="false"
        android:textStyle="bold" />

</LinearLayout>