<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/actionEditAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageGo"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/title_padding"
            android:rotation="180"
            android:scaleType="fitCenter"
            android:tint="@android:color/black"
            app:srcCompat="@drawable/ic_arrow" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/imageGo"
            android:padding="@dimen/title_padding"
            android:text="@string/action_edit_account"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightGray" />

    <RelativeLayout
        android:id="@+id/actionCreateFarmer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageGo1"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/title_padding"
            android:rotation="180"
            android:scaleType="fitCenter"
            android:tint="@android:color/black"
            app:srcCompat="@drawable/ic_arrow" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/imageGo1"
            android:padding="@dimen/title_padding"
            android:text="@string/action_create_farmer"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightGray" />

    <RelativeLayout
        android:id="@+id/actionCreateOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageGo2"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/title_padding"
            android:rotation="180"
            android:scaleType="fitCenter"
            android:tint="@android:color/black"
            app:srcCompat="@drawable/ic_arrow" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/imageGo2"
            android:padding="@dimen/title_padding"
            android:text="@string/action_create_order"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightGray" />

    <RelativeLayout
        android:id="@+id/actionManagerOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageGo3"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/title_padding"
            android:rotation="180"
            android:scaleType="fitCenter"
            android:tint="@android:color/black"
            app:srcCompat="@drawable/ic_arrow" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/imageGo3"
            android:padding="@dimen/title_padding"
            android:text="@string/action_manager_order"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightGray" />

</LinearLayout>